Reformatted log-in and added functionality. Home page now greets by users first name

--- a/src/kv_style/home.kv
+++ b/src/kv_style/home.kv
@@ -6,5 +6,8 @@
         fit_mode: 'scale-down'
 
     Label:
-        text: 'Home Page'
+        id: welcome_label
+        font_size: 30
+        bold: True
+        text: 'Welcome!'
         color: [1, 1, 1, 1]
