--- a/src/kv_style/home.kv
+++ b/src/kv_style/home.kv
@@ -1,4 +1,5 @@
 #:kivy 2.3.0
+# recommendation_input.kv
 
 <HomeScreen>:
     Image:
@@ -11,3 +12,13 @@
         bold: True
         text: 'Welcome!'
         color: [1, 1, 1, 1]
+
+    Button:
+        size_hint: (None, None)
+        size: (130, 30)
+        text: 'Recommend A Song'
+        pos_hint: {'x': 0.01, 'y': 0.01}
+        background_color:[0,1,0,1]
+        on_press:
+            root.manager.transition.direction = 'left'
+            root.manager.current = 'recommendation_input_page'
