User can enter existing session found on firestore and database updates when user joins/leaves. Currently fixing issue of closing app and still says user is in a session.

--- a/src/kv_style/login.kv
+++ b/src/kv_style/login.kv
@@ -14,7 +14,7 @@
             size_hint: (None, None)
             size: (600, 40)
             font_size: 20
-            pos_hint: {'center_x': 0.5}
+            pos_hint: {'center_y': 0.5}
             bold: True
 
         AnchorLayout:
