--- a/src/kv_style/session_home.kv
+++ b/src/kv_style/session_home.kv
@@ -56,7 +56,7 @@
                         background_color:[0,1,0,1]
                         on_press:
                             root.manager.transition.direction = 'down'
-                            root.submit(username_input.text, password_input.text)
+                            root.submit(session_input.text)
                 Label:
                     id: error_message
                     text: ''
