--- a/src/kv_style/listening_session.kv
+++ b/src/kv_style/listening_session.kv
@@ -1,6 +1,7 @@
 #:kivy 2.3.0
+# home.kv
 
-<SessionHomeScreen>:
+<ListeningSessionScreen>:
     Image:
         source: '../other/images/temp_logo.png'
         fit_mode: 'scale-down'
@@ -9,63 +10,17 @@
         orientation: 'vertical'
 
         Label:
-            text: 'Listen together with SpotiVibe.'
+            text: 'Welcome.'
             size_hint: (None, None)
             size: (600, 40)
             font_size: 20
             pos_hint: {'center_y': 0.5}
             bold: True
 
-        AnchorLayout:
-            anchor_x: 'center'
-            anchor_y: 'center'
-
-            BoxLayout:
-                orientation: 'vertical'
-                size_hint: (None, None)
-                size: (250, 250)
-                canvas.before:
-                    Color:
-                        rgba: 1, 1, 1, 1
-                    RoundedRectangle:
-                        pos: self.pos
-                        size: self.size
-                        radius: [10, 10, 10, 10]
-
-                Label:
-                    text: 'Enter Session.'
-                    color: [0,0.4,0,1]
-                    font_size: 20
-                    bold: True
-                BoxLayout:
-                    padding: 10
-
-                    TextInput:
-                        id: session_input
-                        multiline: False
-                        hint_text: '(Session)'
-
-                AnchorLayout:
-                    anchor_x: 'center'
-                    anchor_y: 'center'
-
-                    Button:
-                        size_hint: (None, None)
-                        size: (130, 30)
-                        text: 'Enter'
-                        background_color:[0,1,0,1]
-                        on_press:
-                            root.manager.transition.direction = 'down'
-                            root.submit(username_input.text, password_input.text)
-                Label:
-                    id: error_message
-                    text: ''
-                    color: [1,0,0,0]
-
     Button:
         size_hint: (None, None)
         size: (130, 30)
-        text: 'Back'
+        text: 'Leave Session'
         pos_hint: {'x': 0.01, 'y': 0.01}
         background_color:[0,1,0,1]
         on_press:
