Can now create any session name you want as long as it doesn't exist and can join any session name you want as long as it exists. Added a session_name id in the main class

--- a/src/kv_style/home.kv
+++ b/src/kv_style/home.kv
@@ -27,7 +27,7 @@
     Button:
         size_hint: (None, None)
         size: (130, 30)
-        text: 'Create Session'
+        text: 'Session'
         pos_hint: {'x': 0.59, 'y': 0.01}
         background_color:[0,1,0,1]
         on_press:
