--- a/src/kv_style/tab2.kv
+++ b/src/kv_style/tab2.kv
@@ -32,7 +32,7 @@
             id: player_window
             size_hint: None, None
             size: dp(500), dp(500)
-            pos: (root.width - self.width) / 2, dp(-475)
+            pos: (root.width - self.width) / 2, dp(-435)
 
             canvas.before:
                 Color:
@@ -58,7 +58,7 @@
                 size_hint: None, None
                 minimum_height: dp(10)
                 size: dp(30), dp(10)
-                pos: (root.width - self.width) / 2, self.parent.pos[1] + dp(482)
+                pos: (root.width - self.width) / 2, self.parent.pos[1] + dp(485)
                 background_color: 0, 0, 0, 0
 
                 on_press: root.animate_player()
@@ -70,25 +70,19 @@
                         size: self.size
                         radius: [3, 3, 3, 3]
             BoxLayout:
+                id: control_buttons
                 orientation: 'horizontal'
                 size_hint: None, None
                 size: self.minimum_size
                 padding: 10
-                spacing: 10
+                spacing: 15
 
-                pos: (root.width - self.width) / 2, self.parent.pos[1] + dp(100)
-
-                canvas.before:
-                    Color:
-                        rgba: 0.8, 0.8, 0.8, 1
-                    RoundedRectangle:
-                        pos: self.pos
-                        size: self.size
-                        radius: [10, 10, 10, 10]
+                pos: (root.width - self.width) / 2, self.parent.pos[1] + dp(435)
 
                 Button:
                     size_hint: None, None
-                    size: dp(30), dp(30)
+                    size: dp(20), dp(20)
+                    pos_hint: {'center_y': 0.5}
                     background_color: 0, 0, 0, 0
 
                     on_press: root.dislike()
@@ -140,7 +134,8 @@
                         size: self.parent.height, self.parent.height
                 Button:
                     size_hint: None, None
-                    size: dp(30), dp(30)
+                    size: dp(20), dp(20)
+                    pos_hint: {'center_y': 0.5}
                     background_color: 0, 0, 0, 0
 
                     on_press: root.like()
