--- a/src/kv_style/tab2.kv
+++ b/src/kv_style/tab2.kv
@@ -24,6 +24,7 @@
                 max: 100
                 step: 1
                 value: 50
+                on_value: root.volume(volume_slider.value)
 
             Label:
                 text: f'Volume: {int(volume_slider.value)}%'
