--- a/src/kv_style/home.kv
+++ b/src/kv_style/home.kv
@@ -18,7 +18,7 @@
         size_hint: (None, None)
         size: (130, 30)
         text: 'Recommend A Song'
-        pos_hint: {'x': 0.01, 'y': 0.01}
+        pos_hint: {'x': 0.01, 'y': 0.51}
         background_color:[0,1,0,1]
         on_press:
             root.manager.transition.direction = 'left'
@@ -28,8 +28,73 @@
         size_hint: (None, None)
         size: (130, 30)
         text: 'Session'
-        pos_hint: {'x': 0.59, 'y': 0.01}
+        pos_hint: {'x': 0.59, 'y': 0.51}
         background_color:[0,1,0,1]
         on_press:
             root.manager.transition.direction = 'left'
             root.manager.current = 'session_home_page'
+
+<TabBar>:
+    size_hint_y: None
+    height: dp(50)  # Set the height in dp (adjust as needed)
+
+    canvas.before:
+        Color:
+            rgba: 0.1, 0.1, 0.1, 1  # Dark grey color
+        Rectangle:
+            pos: self.pos
+            size: self.size
+        Color:
+            rgba: 0, 0, 0, 1  # Dark grey color
+        Line:
+            width: 1
+            points: [self.width / 3, 0, self.width / 3, self.height]
+        Line:
+            width: 1
+            points: [2 * self.width / 3, 0, 2 * self.width / 3, self.height]
+
+
+    Button:
+        size_hint_x: None  # Disable the x-size hint
+        width: dp(50)  # Set the width in dp (adjust as needed)
+        pos: root.width / 6 - self.width / 2, (root.height - self.height) / 2
+        background_color: 0, 0, 0, 0
+
+        on_press: root.switch_screen('tab1')
+
+        Image:
+            id: my_image
+            source: '../other/images/home_icon.png'
+            center_x: self.parent.center_x
+            center_y: 1.6 * self.parent.center_y
+            size: self.parent.height * 0.6, self.parent.height * 0.6
+
+    Button:
+        size_hint_x: None  # Disable the x-size hint
+        width: dp(50)  # Set the width in dp (adjust as needed)
+        pos: (root.width - self.width) / 2, (root.height - self.height) / 2
+        background_color: 0, 0, 0, 0
+
+        on_press: root.switch_screen('tab2')
+
+        Image:
+            id: my_image
+            source: '../other/images/search_icon.png'
+            center_x: self.parent.center_x
+            center_y: 1.6 * self.parent.center_y
+            size: self.parent.height * 0.5, self.parent.height * 0.5
+
+    Button:
+        size_hint_x: None  # Disable the x-size hint
+        width: dp(50)  # Set the width in dp (adjust as needed)
+        pos: 5 * root.width / 6 - self.width / 2, (root.height - self.height) / 2
+        background_color: 0, 0, 0, 0
+
+        on_press: root.switch_screen('tab3')
+
+        Image:
+            id: my_image
+            source: '../other/images/settings_icon.png'
+            size: self.parent.height * 0.5, self.parent.height * 0.5
+            center_x: self.parent.center_x
+            center_y: 1.6 * self.parent.center_y
