--- a/src/kv_style/session_home.kv
+++ b/src/kv_style/session_home.kv
@@ -1,11 +1,9 @@
 #:kivy 2.3.0
 
 <SessionHomeScreen>:
-    Image:
-        source: '../other/images/temp_logo.png'
-        fit_mode: 'scale-down'
 
     BoxLayout:
+        id: 'box_layout'
         orientation: 'vertical'
 
         AnchorLayout:
@@ -44,7 +42,7 @@
                     background_color:[0,1,0,1]
                     pos_hint: {'x': 0.25, 'y': 20.01}
                     on_press:
-                        root.manager.transition.direction = 'down'
+                        # root.manager.transition.direction = 'down'
                         root.submit(session_input.text, 'Join')
 
                 Button:
@@ -61,13 +59,3 @@
                     id: error_message
                     text: ''
                     color: [1,0,0,0]
-
-    Button:
-        size_hint: (None, None)
-        size: (130, 30)
-        text: 'Back'
-        pos_hint: {'x': 0.01, 'y': 0.01}
-        background_color:[0,1,0,1]
-        on_press:
-            root.manager.transition.direction = 'left'
-            root.manager.current = 'home_page'
