Passwords are no longer displayed as text but ****

--- a/src/kv_style/create_account.kv
+++ b/src/kv_style/create_account.kv
@@ -37,6 +37,8 @@
                     id: password_input
                     multiline: False
                     hint_text: 'Password'
+                    password: True
+
 
             BoxLayout:
                 padding: 10
