--- a/src/kv_style/login.kv
+++ b/src/kv_style/login.kv
@@ -53,6 +53,7 @@
                         id: password_input
                         multiline: False
                         hint_text: 'Password'
+                        password: True
 
                 AnchorLayout:
                     anchor_x: 'center'
