joining and leaving a session works with new home tab UI. Minor changes to other classes.

--- a/src/kv_style/home.kv
+++ b/src/kv_style/home.kv
@@ -1,6 +1,5 @@
 #:kivy 2.3.0
 # recommendation_input.kv
-# session_home.kv
 
 <HomeScreen>:
     Image:
@@ -41,7 +40,8 @@
         pos: root.width / 6 - self.width / 2, (root.height - self.height) / 2
         background_color: 0, 0, 0, 0
 
-        on_press: root.switch_screen('tab1')
+        on_press:
+            root.switch_screen('tab1')
 
         Image:
             id: my_image
@@ -56,7 +56,8 @@
         pos: (root.width - self.width) / 2, (root.height - self.height) / 2
         background_color: 0, 0, 0, 0
 
-        on_press: root.switch_screen('tab2')
+        on_press:
+            root.switch_screen('tab2')
 
         Image:
             id: my_image
@@ -71,7 +72,8 @@
         pos: 5 * root.width / 6 - self.width / 2, (root.height - self.height) / 2
         background_color: 0, 0, 0, 0
 
-        on_press: root.switch_screen('tab3')
+        on_press:
+            root.switch_screen('tab3')
 
         Image:
             id: my_image
