--- a/src/kv_style/session_home.kv
+++ b/src/kv_style/session_home.kv
@@ -42,7 +42,7 @@
                     background_color:[0,1,0,1]
                     pos_hint: {'x': 0.25, 'y': 20.01}
                     on_press:
-                        # root.manager.transition.direction = 'down'
+                        root.manager.transition.direction = 'down'
                         root.submit(session_input.text, 'Join')
 
                 Button:
