--- a/src/kv_style/tab1.kv
+++ b/src/kv_style/tab1.kv
@@ -3,6 +3,14 @@
 
 <Tab1>
     RelativeLayout:
+        Label:
+            id: welcome_label
+            font_size: 30
+            bold: True
+            text: 'Welcome!'
+            pos_hint: {'center_y': 0.90}
+            color: [1, 1, 1, 1]
+
         BoxLayout:
             orientation: 'vertical'
             size_hint: None, None
