--- a/src/kv_style/home.kv
+++ b/src/kv_style/home.kv
@@ -1,5 +1,4 @@
 #:kivy 2.3.0
-# recommendation_input.kv
 
 <HomeScreen>:
     Image:
@@ -33,7 +32,7 @@
         background_color: 0, 0, 0, 0
 
         on_press:
-            root.switch_screen('tab1')
+            root.switch_screen('1')
 
         Image:
             id: my_image
@@ -67,7 +66,7 @@
         background_color: 0, 0, 0, 0
 
         on_press:
-            root.switch_screen('tab2')
+            root.switch_screen('2')
 
         Image:
             id: my_image
@@ -83,7 +82,7 @@
         background_color: 0, 0, 0, 0
 
         on_press:
-            root.switch_screen('tab3')
+            root.switch_screen('3')
 
         Image:
             id: my_image
