--- a/src/kv_style/listening_session.kv
+++ b/src/kv_style/listening_session.kv
@@ -1,11 +1,15 @@
 #:kivy 2.3.0
 
 <ListeningSessionScreen>:
+    Image:
+        source: '../other/images/temp_logo.png'
+        fit_mode: 'scale-down'
+
     Label:
         id: session_label
-        font_size: 30
+        font_size: 20
         bold: True
-        pos_hint: {'center_y': 0.95}
+        pos_hint: {'x': 0.65, 'y': 0.09}
         color: [1, 1, 1, 1]
 
     Label:
@@ -13,15 +17,89 @@
         size_hint: (None, None)
         size: (600, 40)
         font_size: 20
-        pos_hint: {'x': -0.06, 'y': 0.005}
+        pos_hint: {'x': 0.65, 'y': 0.09}
         bold: True
 
     Button:
         size_hint: (None, None)
         size: (130, 30)
         text: 'Leave'
-        pos_hint: {'x': 0.01, 'y': 0.01}
+        pos_hint: {'x': 0.01, 'y': 0.09}
         background_color:[0,1,0,1]
         on_press:
             root.manager.transition.direction = 'up'
             root.submit()
+
+    Label:
+        id: error_message
+        text: ''
+        color: [1,0,0,0]
+
+
+<TabBar>:
+    size_hint_y: None
+    height: dp(50)  # Set the height in dp (adjust as needed)
+
+    canvas.before:
+        Color:
+            rgba: 0.1, 0.1, 0.1, 1  # Dark grey color
+        Rectangle:
+            pos: self.pos
+            size: self.size
+        Color:
+            rgba: 0, 0, 0, 1  # Dark grey color
+        Line:
+            width: 1
+            points: [self.width / 3, 0, self.width / 3, self.height]
+        Line:
+            width: 1
+            points: [2 * self.width / 3, 0, 2 * self.width / 3, self.height]
+
+
+    Button:
+        size_hint_x: None  # Disable the x-size hint
+        width: dp(50)  # Set the width in dp (adjust as needed)
+        pos: root.width / 6 - self.width / 2, (root.height - self.height) / 2
+        background_color: 0, 0, 0, 0
+
+        on_press:
+            root.switch_screen('1')
+
+        Image:
+            id: my_image
+            source: '../other/images/home_icon.png'
+            center_x: self.parent.center_x
+            center_y: 1.6 * self.parent.center_y
+            size: self.parent.height * 0.6, self.parent.height * 0.6
+
+    Button:
+        size_hint_x: None  # Disable the x-size hint
+        width: dp(50)  # Set the width in dp (adjust as needed)
+        pos: (root.width - self.width) / 2, (root.height - self.height) / 2
+        background_color: 0, 0, 0, 0
+
+        on_press:
+            root.switch_screen('2')
+
+        Image:
+            id: my_image
+            source: '../other/images/search_icon.png'
+            center_x: self.parent.center_x
+            center_y: 1.6 * self.parent.center_y
+            size: self.parent.height * 0.5, self.parent.height * 0.5
+
+    Button:
+        size_hint_x: None  # Disable the x-size hint
+        width: dp(50)  # Set the width in dp (adjust as needed)
+        pos: 5 * root.width / 6 - self.width / 2, (root.height - self.height) / 2
+        background_color: 0, 0, 0, 0
+
+        on_press:
+            root.switch_screen('3')
+
+        Image:
+            id: my_image
+            source: '../other/images/settings_icon.png'
+            size: self.parent.height * 0.5, self.parent.height * 0.5
+            center_x: self.parent.center_x
+            center_y: 1.6 * self.parent.center_y
