--- a/src/kv_style/tab1.kv
+++ b/src/kv_style/tab1.kv
@@ -1,6 +1,3 @@
-# session_home.kv
-# listening_session.kv
-
 <Tab1>
     RelativeLayout:
         Label:
@@ -10,6 +7,64 @@
             text: 'Welcome!'
             pos_hint: {'center_y': 0.90}
             color: [1, 1, 1, 1]
+
+        BoxLayout:
+            id: 'box_layout'
+            orientation: 'vertical'
+
+            AnchorLayout:
+                anchor_x: 'center'
+                anchor_y: 'center'
+
+                BoxLayout:
+                    orientation: 'vertical'
+                    size_hint: (None, None)
+                    size: (250, 250)
+                    canvas.before:
+                        Color:
+                            rgba: 1, 1, 1, 1
+                        RoundedRectangle:
+                            pos: self.pos
+                            size: self.size
+                            radius: [10, 10, 10, 10]
+
+                    Label:
+                        text: 'Enter Session.'
+                        color: [0,0.4,0,1]
+                        font_size: 20
+                        bold: True
+                    BoxLayout:
+                        padding: 10
+
+                        TextInput:
+                            id: session_input
+                            multiline: False
+                            hint_text: '(Session)'
+
+                    Button:
+                        size_hint: (None, None)
+                        size: (130, 30)
+                        text: 'Join'
+                        background_color:[0,1,0,1]
+                        pos_hint: {'x': 0.25, 'y': 20.01}
+                        on_press:
+                            root.manager.transition.direction = 'down'
+                            root.submit(session_input.text, 'Join')
+
+                    Button:
+                        size_hint: (None, None)
+                        size: (130, 30)
+                        text: 'Create'
+                        background_color:[0,1,0,1]
+                        pos_hint: {'x': 0.25, 'y': 2.91}
+                        on_press:
+                            root.manager.transition.direction = 'down'
+                            root.submit(session_input.text, 'Create')
+
+                    Label:
+                        id: error_message
+                        text: ''
+                        color: [1,0,0,0]
 
         BoxLayout:
             orientation: 'vertical'
