--- a/src/kv_style/home.kv
+++ b/src/kv_style/home.kv
@@ -60,9 +60,9 @@
             root.connect()
 
     Button:
-        size_hint_x: None  # Disable the x-size hint
-        width: dp(50)  # Set the width in dp (adjust as needed)
-        pos: (root.width - self.width) / 2, (root.height - self.height) / 2
+        size_hint: None, None  # Disable the x-size hint
+        size: dp(50), dp(50)  # Set the width in dp (adjust as needed)
+        pos_hint: {'center_x': 0.5, 'center_y': 0.5}
         background_color: 0, 0, 0, 0
 
         on_press:
@@ -71,14 +71,13 @@
         Image:
             id: my_image
             source: '../other/images/search_icon.png'
-            center_x: self.parent.center_x
-            center_y: 1.6 * self.parent.center_y
+            center: self.parent.center
             size: self.parent.height * 0.5, self.parent.height * 0.5
 
     Button:
-        size_hint_x: None  # Disable the x-size hint
-        width: dp(50)  # Set the width in dp (adjust as needed)
-        pos: 5 * root.width / 6 - self.width / 2, (root.height - self.height) / 2
+        size_hint: None, None  # Disable the x-size hint
+        size: dp(50), dp(50)  # Set the width in dp (adjust as needed)
+        pos_hint: {'center_x': 5/6, 'center_y': 0.5}
         background_color: 0, 0, 0, 0
 
         on_press:
@@ -88,5 +87,4 @@
             id: my_image
             source: '../other/images/settings_icon.png'
             size: self.parent.height * 0.5, self.parent.height * 0.5
-            center_x: self.parent.center_x
-            center_y: 1.6 * self.parent.center_y
+            center: self.parent.center
