--- a/src/kv_style/listening_session.kv
+++ b/src/kv_style/listening_session.kv
@@ -36,7 +36,7 @@
         color: [1,0,0,0]
 
 
-<TabBar>:
+<TabBar2>:
     size_hint_y: None
     height: dp(50)  # Set the height in dp (adjust as needed)
 
@@ -57,9 +57,9 @@
 
 
     Button:
-        size_hint_x: None  # Disable the x-size hint
-        width: dp(50)  # Set the width in dp (adjust as needed)
-        pos: root.width / 6 - self.width / 2, (root.height - self.height) / 2
+        size_hint: None, None  # Disable the x-size hint
+        size: dp(50), dp(50)  # Set the width in dp (adjust as needed)
+        pos_hint: {'center_x': 1/6, 'center_y': 0.5}
         background_color: 0, 0, 0, 0
 
         on_press:
@@ -67,15 +67,14 @@
 
         Image:
             id: my_image
-            source: '../other/images/home_icon.png'
-            center_x: self.parent.center_x
-            center_y: 1.6 * self.parent.center_y
+            source: '../other/images/chat_icon.png'
+            center: self.parent.center
             size: self.parent.height * 0.6, self.parent.height * 0.6
 
     Button:
-        size_hint_x: None  # Disable the x-size hint
-        width: dp(50)  # Set the width in dp (adjust as needed)
-        pos: (root.width - self.width) / 2, (root.height - self.height) / 2
+        size_hint: None, None  # Disable the x-size hint
+        size: dp(50), dp(50)  # Set the width in dp (adjust as needed)
+        pos_hint: {'center_x': 0.5, 'center_y': 0.5}
         background_color: 0, 0, 0, 0
 
         on_press:
@@ -83,15 +82,14 @@
 
         Image:
             id: my_image
-            source: '../other/images/search_icon.png'
-            center_x: self.parent.center_x
-            center_y: 1.6 * self.parent.center_y
+            source: '../other/images/music_icon.png'
+            center: self.parent.center
             size: self.parent.height * 0.5, self.parent.height * 0.5
 
     Button:
-        size_hint_x: None  # Disable the x-size hint
-        width: dp(50)  # Set the width in dp (adjust as needed)
-        pos: 5 * root.width / 6 - self.width / 2, (root.height - self.height) / 2
+        size_hint: None, None  # Disable the x-size hint
+        size: dp(50), dp(50)  # Set the width in dp (adjust as needed)
+        pos_hint: {'center_x': 5/6, 'center_y': 0.5}
         background_color: 0, 0, 0, 0
 
         on_press:
@@ -101,5 +99,4 @@
             id: my_image
             source: '../other/images/settings_icon.png'
             size: self.parent.height * 0.5, self.parent.height * 0.5
-            center_x: self.parent.center_x
-            center_y: 1.6 * self.parent.center_y
+            center: self.parent.center
