--- a/src/kv_style/create_account.kv
+++ b/src/kv_style/create_account.kv
@@ -29,6 +29,8 @@
                     id: username_input
                     multiline: False
                     hint_text: 'Username'
+                    write_tab: False
+                    on_text_validate: root.submit(username_input.text, password_input.text, re_password_input.text)
 
             BoxLayout:
                 padding: dp(10)
@@ -38,7 +40,8 @@
                     multiline: False
                     hint_text: 'Password'
                     password: True
-
+                    write_tab: False
+                    on_text_validate: root.submit(username_input.text, password_input.text, re_password_input.text)
 
             BoxLayout:
                 padding: dp(10)
@@ -47,6 +50,8 @@
                     id: re_password_input
                     multiline: False
                     hint_text: 'Re-enter Password'
+                    write_tab: False
+                    on_text_validate: root.submit(username_input.text, password_input.text, re_password_input.text)
 
             AnchorLayout:
                 anchor_x: 'center'
