--- a/src/kv_style/home.kv
+++ b/src/kv_style/home.kv
@@ -6,6 +6,7 @@
         fit_mode: 'scale-down'
 
 <TabBar>:
+    id: tab_bar
     size_hint_y: None
     height: dp(50)  # Set the height in dp (adjust as needed)
 
