Added colors to the buttons dependent upon which screen is pressed

--- a/src/kv_style/home.kv
+++ b/src/kv_style/home.kv
@@ -5,16 +5,18 @@
         source: '../other/images/temp_logo.png'
         fit_mode: 'scale-down'
 
+
 <TabBar>:
     id: tab_bar
     size_hint_y: None
     height: dp(50)  # Set the height in dp (adjust as needed)
+    pos: root.x, root.top - self.height
 
     canvas.before:
         Color:
             rgba: 0.1, 0.1, 0.1, 1  # Dark grey color
         Rectangle:
-            pos: self.pos
+            pos: root.x, root.top - self.height
             size: self.size
         Color:
             rgba: 0, 0, 0, 1  # Dark grey color
@@ -27,10 +29,11 @@
 
 
     Button:
+        id: home_button
         size_hint: None, None  # Disable the x-size hint
         size: dp(50), dp(50)  # Set the width in dp (adjust as needed)
         pos_hint: {'center_x': 1/6, 'center_y': 0.5}
-        background_color: 0, 0, 0, 0
+        background_color: 0, 1, 0, 1
 
         on_press:
             root.switch_screen('1')
@@ -42,6 +45,7 @@
             size: self.parent.height * 0.6, self.parent.height * 0.6
 
     Button:
+        id: search_button
         size_hint: None, None  # Disable the x-size hint
         size: dp(50), dp(50)  # Set the width in dp (adjust as needed)
         pos_hint: {'center_x': 0.5, 'center_y': 0.5}
@@ -57,6 +61,7 @@
             size: self.parent.height * 0.5, self.parent.height * 0.5
 
     Button:
+        id: setting_button
         size_hint: None, None  # Disable the x-size hint
         size: dp(50), dp(50)  # Set the width in dp (adjust as needed)
         pos_hint: {'center_x': 5/6, 'center_y': 0.5}
