--- a/src/kv_style/home.kv
+++ b/src/kv_style/home.kv
@@ -1,22 +1,24 @@
 #:kivy 2.3.0
 
 <HomeScreen>:
-    Image:
-        source: '../other/images/temp_logo.png'
-        fit_mode: 'scale-down'
+    BoxLayout:
+        orientation: 'vertical'
+
+        Image:
+            source: '../other/images/temp_logo.png'
+            fit_mode: 'scale-down'
 
 
 <TabBar>:
     id: tab_bar
     size_hint_y: None
     height: dp(50)  # Set the height in dp (adjust as needed)
-    pos: root.x, root.top - self.height
 
     canvas.before:
         Color:
             rgba: 0.1, 0.1, 0.1, 1  # Dark grey color
         Rectangle:
-            pos: root.x, root.top - self.height
+            pos: self.pos
             size: self.size
         Color:
             rgba: 0, 0, 0, 1  # Dark grey color
