--- a/src/kv_style/home.kv
+++ b/src/kv_style/home.kv
@@ -1,11 +1,16 @@
 #:kivy 2.3.0
 
 <HomeScreen>:
-    Image:
-        source: '../other/images/temp_logo.png'
-        fit_mode: 'scale-down'
+    BoxLayout:
+        orientation: 'vertical'
+
+        Image:
+            source: '../other/images/temp_logo.png'
+            fit_mode: 'scale-down'
+
 
 <TabBar>:
+    id: tab_bar
     size_hint_y: None
     height: dp(50)  # Set the height in dp (adjust as needed)
 
@@ -26,6 +31,7 @@
 
 
     Button:
+        id: home_button
         size_hint: None, None  # Disable the x-size hint
         size: dp(50), dp(50)  # Set the width in dp (adjust as needed)
         pos_hint: {'center_x': 1/6, 'center_y': 0.5}
@@ -35,12 +41,20 @@
             root.switch_screen('1')
 
         Image:
-            id: my_image
+            id: home_image
             source: '../other/images/home_icon.png'
             center: self.parent.center
             size: self.parent.height * 0.6, self.parent.height * 0.6
+            canvas.after:
+                Color:
+                    rgba: 0, 1, 0, 0.5  # Red tint with 50% opacity
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
+                    source: self.source
 
     Button:
+        id: search_button
         size_hint: None, None  # Disable the x-size hint
         size: dp(50), dp(50)  # Set the width in dp (adjust as needed)
         pos_hint: {'center_x': 0.5, 'center_y': 0.5}
@@ -50,12 +64,20 @@
             root.switch_screen('2')
 
         Image:
-            id: my_image
+            id: search_image
             source: '../other/images/search_icon.png'
             center: self.parent.center
             size: self.parent.height * 0.5, self.parent.height * 0.5
+            canvas.after:
+                Color:
+                    rgba: 0, 1, 0, 0  # Red tint with 50% opacity
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
+                    source: self.source
 
     Button:
+        id: setting_button
         size_hint: None, None  # Disable the x-size hint
         size: dp(50), dp(50)  # Set the width in dp (adjust as needed)
         pos_hint: {'center_x': 5/6, 'center_y': 0.5}
@@ -65,7 +87,14 @@
             root.switch_screen('3')
 
         Image:
-            id: my_image
+            id: settings_image
             source: '../other/images/settings_icon.png'
             size: self.parent.height * 0.5, self.parent.height * 0.5
             center: self.parent.center
+            canvas.after:
+                Color:
+                    rgba: 0, 1, 0, 0  # Red tint with 50% opacity
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
+                    source: self.source
