firebase updates user fields when user leaves during a session

--- a/src/kv_style/listening_session.kv
+++ b/src/kv_style/listening_session.kv
@@ -7,10 +7,11 @@
 
     Label:
         id: session_label
+        size_hint: (None, None)
+        size: (600, 40)
         font_size: 20
+        pos_hint: {'x': 0.65, 'y': 0.12}
         bold: True
-        pos_hint: {'x': 0.65, 'y': 0.09}
-        color: [1, 1, 1, 1]
 
     Label:
         id: user_label
