--- a/src/kv_style/ls_tab1.kv
+++ b/src/kv_style/ls_tab1.kv
@@ -1,2 +1,9 @@
 <LS_Tab1>
-    RelativeLayout:
+    Button:
+        id: add_button
+        size_hint: (None, None)
+        size: (130, 30)
+        text: 'Connect to Chat'
+        pos_hint: {'x': 0.01, 'y': 0.08}
+        on_press:
+            root.connect()
