--- a/src/kv_style/tab3.kv
+++ b/src/kv_style/tab3.kv
@@ -11,7 +11,7 @@
                 size: self.parent.width - dp(60), dp(30)
                 Label:
                     text: 'Friends:'
-                    font_size: dp(20)
+                    font_size: dp(30)
                     size_hint: None, None
                     size: self.texture_size
             AnchorLayout:
@@ -22,28 +22,28 @@
                 padding: dp(10)
                 canvas.before:
                     Color:
-                        rgba: 1, 1, 1, 1  # White color
+                        rgba: 0.1, 0.1, 0.1, 1
                     Rectangle:
                         pos: self.pos
                         size: self.size
+                    Color:
+                        rgba: 1, 1, 1, 1
+                    Line:
+                        width: dp(1)
+                        rectangle: self.x, self.y, self.width, self.height
                 Label:
                     id: friend_list
                     size_hint: None, None
                     size: self.texture_size
-                    color: (0, 0, 0, 1)
                     text: "<loading>"
             AnchorLayout:
                 anchor_x: 'center'  # Aligns children to the left
                 anchor_y: 'top'
                 BoxLayout:
                     orientation: 'horizontal'
-                    size_hint: None, None
-                    size: self.minimum_size
                     spacing: dp(10)
                     BoxLayout:
                         orientation: 'vertical'
-                        size_hint: None, None
-                        size: self.minimum_size
                         spacing: dp(5)
                         TextInput:
                             id: friend_input
@@ -54,13 +54,18 @@
                         Button:
                             text: 'Send Friend Request'
                             size_hint: None, None
-                            size: dp(150), dp(50)
+                            size: dp(150), dp(30)
+                            background_color:[0,1,0,1]
                             on_press: root.invite_friend(friend_input.text)
                         Button:
                             text: 'Remove Friend'
                             size_hint: None, None
-                            size: dp(150), dp(50)
+                            size: dp(150), dp(30)
+                            background_color:[0,1,0,1]
                             on_press: root.remove_friend(friend_input.text)
+                        BoxLayout:
+                            id: blank_space
+                            orientation: 'vertical'
                     BoxLayout:
                         orientation: 'vertical'
                         size_hint_x: None
@@ -80,6 +85,7 @@
                                 text: 'Pending Invites'
                                 size_hint: None, None
                                 size: dp(150), dp(50)
+                                background_color: (0.1, 0.1, 0.1, 1)
                                 on_press:
                                     root.toggle_dropdown()
                         BoxLayout:
@@ -95,7 +101,7 @@
                 size: self.parent.width - dp(60), dp(30)
                 Label:
                     text: 'Account:'
-                    font_size: dp(20)
+                    font_size: dp(30)
                     size_hint: None, None
                     size: self.texture_size
             AnchorLayout:
@@ -106,50 +112,60 @@
                 padding: dp(10)
                 canvas.before:
                     Color:
-                        rgba: 1, 1, 1, 1  # White color
+                        rgba: 0.1, 0.1, 0.1, 1
                     Rectangle:
                         pos: self.pos
                         size: self.size
+                    Color:
+                        rgba: 1, 1, 1, 1
+                    Line:
+                        width: dp(1)
+                        rectangle: self.x, self.y, self.width, self.height
                 Label:
                     id: account_info
                     size_hint: None, None
                     size: self.texture_size
-                    color: (0, 0, 0, 1)
                     text: "<loading>"
             AnchorLayout:
                 anchor_x: 'center'  # Aligns children to the left
                 anchor_y: 'top'
                 BoxLayout:
+                    id: account_management
                     orientation: 'vertical'
-                    size_hint: None, None
-                    size: self.minimum_size
-                    spacing: dp(10)
+                    size_hint_x: None
+                    width: self.minimum_size[0]
+                    spacing: dp(5)
                     Button:
                         text: 'Edit Account Info'
                         size_hint: None, None
-                        size: dp(150), dp(50)
+                        size: dp(150), dp(30)
+                        background_color:[0,1,0,1]
                         on_press:
                             root.parent.parent.parent.parent.transition.direction = 'up'
                             root.parent.parent.parent.parent.current = 'add_account_info_page'
                     Button:
                         text: 'Change Password'
                         size_hint: None, None
-                        size: dp(150), dp(50)
+                        size: dp(150), dp(30)
+                        background_color:[0,1,0,1]
                         on_press:
                             root.parent.parent.parent.parent.transition.direction = 'up'
                             root.parent.parent.parent.parent.current = 'change_password_page'
+                    BoxLayout:
+                        id: blank_space
+                        orientation: 'vertical'
                     Button:
                         text: 'Logout'
                         size_hint: None, None
-                        size: dp(150), dp(50)
+                        size: dp(150), dp(30)
+                        background_color:[0,1,0,1]
                         on_press:
                             root.logout()
                     Button:
+                        id: delete_account
                         text: 'Delete Account'
                         size_hint: None, None
-                        size: dp(150), dp(50)
+                        size: dp(150), dp(30)
+                        background_color:[0,1,0,1]
                         on_press:
                             root.delete_account()
-            BoxLayout:
-                id: blank_space
-                orientation: 'vertical'
