Redesigned settings page

--- a/src/kv_style/tab3.kv
+++ b/src/kv_style/tab3.kv
@@ -51,6 +51,9 @@
                             size: dp(150), dp(30)
                             multiline: False
                             hint_text: 'Username'
+                        BoxLayout:
+                            size_hint: None, None
+                            size: dp(150), dp(10)
                         Button:
                             text: 'Send Friend Request'
                             size_hint: None, None
@@ -154,18 +157,48 @@
                     BoxLayout:
                         id: blank_space
                         orientation: 'vertical'
-                    Button:
-                        text: 'Logout'
-                        size_hint: None, None
-                        size: dp(150), dp(30)
-                        background_color:[0,1,0,1]
-                        on_press:
-                            root.logout()
-                    Button:
-                        id: delete_account
-                        text: 'Delete Account'
-                        size_hint: None, None
-                        size: dp(150), dp(30)
-                        background_color:[0,1,0,1]
-                        on_press:
-                            root.delete_account()
+    AnchorLayout:
+        anchor_x: 'right'
+        anchor_y: 'bottom'
+        padding: dp(10)
+        BoxLayout:
+            orientation: 'vertical'
+            spacing: dp(5)
+            size_hint: None, None
+            size: self.minimum_size
+            Button:
+                text: 'Logout'
+                size_hint: None, None
+                size: dp(120), dp(30)
+                background_color:[0,1,0,1]
+                on_press:
+                    root.logout()
+            Button:
+                id: delete_account
+                text: 'Delete Account'
+                size_hint: None, None
+                size: dp(120), dp(30)
+                background_color:[0,1,0,1]
+                on_press:
+                    root.delete_account()
+    BoxLayout:
+        id: error_window
+        size_hint: None, None
+        size: self.minimum_size[0], dp(40)
+        pos: -self.minimum_size[0], dp(10)
+        opacity: 0
+        padding: dp(10)
+        canvas.before:
+            Color:
+                rgba: 1, 1, 1, 1
+            RoundedRectangle:
+                pos: self.pos
+                size: self.size
+                radius: [5, 5, 5, 5]
+        Label:
+            id: window_message
+            text: ''
+            color: (0, 0, 0, 1)
+            size_hint: None, None
+            size: self.texture_size[0], dp(20)
+            center: self.parent.center
