Fixed the program crashing if leaving a session from the music player

--- a/src/kv_style/login.kv
+++ b/src/kv_style/login.kv
@@ -10,7 +10,7 @@
         orientation: 'vertical'
 
         Label:
-            text: 'Listen together with SpotiVibe.'
+            text: 'Listen_Chat together with SpotiVibe.'
             size_hint: (None, None)
             size: (dp(600), dp(40))
             font_size: dp(20)
